fix(project): Update the new changes
